--- a/package.json
+++ b/package.json
@@ -5,13 +5,20 @@
   "author": "Scott Moss <willscottmoss@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "@theme-ui/presets": "^0.3.0",
     "next": "^9.5.0",
+    "next-connect": "^0.8.1",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "theme-ui": "^0.3.1"
   },
   "scripts": {
     "dev": "next",
     "build": "next build",
     "start": "next start"
+  },
+  "devDependencies": {
+    "dotenv-load": "^2.0.0",
+    "next-env": "^1.1.1"
   }
 }
